Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24015

Qt Creator crashes when running cmake from outside

    XMLWordPrintable

Details

    • 7c985c14ad3ef802a4f2b490559cf30df226d84f (qt-creator/qt-creator/master)

    Description

      1. open Qt Creator
      2. create a dummy CMake application
      3. build the application
      4. open a terminal in the build directory
      5. run "cmake ."
      6. set focus to Qt Creator

      Qt Creator crashes:

      1  QHashData::nextNode(QHashData::Node *)                                                                                                                                                                                                                                                                                  (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101e10ba7    
      2  QHash<QString, QHashDummyValue>::const_iterator::operator++()                                                                                                                                                                                                                                                           qhash.h                                                                                                             411 0x1002b5b8c    
      3  QSet<QString>::const_iterator::operator++()                                                                                                                                                                                                                                                                             qset.h                                                                                                              164 0x1002b543c    
      4  Utils::FileSystemWatcherPrivate::autoReloadPostponed(bool)                                                                                                                                                                                                                                                              filesystemwatcher.cpp                                                                                               203 0x10034c8ac    
      5  Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool)::operator()(bool) const                                                                                                                                                                                      filesystemwatcher.cpp                                                                                               146 0x10034f9c9    
      6  QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool)>::call(Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool)&, void * *) qobjectdefs_impl.h                                                                                                  146 0x10034f989    
      7  void QtPrivate::Functor<Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool), 1>::call<QtPrivate::List<bool>, void>(Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool)&, void *, void * *)                qobjectdefs_impl.h                                                                                                  256 0x10034f931    
      8  QtPrivate::QFunctorSlotObject<Utils::FileSystemWatcherPrivate::FileSystemWatcherPrivate(Utils::FileSystemWatcher *, int)::'lambda'(bool), 1, QtPrivate::List<bool>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                         qobjectdefs_impl.h                                                                                                  443 0x10034f8dc    
      9  void doActivate<false>(QObject *, int, void * *)                                                                                                                                                                                                                                                                        (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101fd7a95    
      10 Utils::GlobalFileChangeBlocker::stateChanged(bool)                                                                                                                                                                                                                                                                      moc_globalfilechangeblocker.cpp                                                                                     133 0x100276fa8    
      11 Utils::GlobalFileChangeBlocker::emitIfChanged()                                                                                                                                                                                                                                                                         globalfilechangeblocker.cpp                                                                                         65  0x100362086    
      12 Utils::GlobalFileChangeBlocker::eventFilter(QObject *, QEvent *)                                                                                                                                                                                                                                                        globalfilechangeblocker.cpp                                                                                         57  0x1003620f3    
      13 QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject *, QEvent *)                                                                                                                                                                                                                                        (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101fa4b74    
      14 QApplicationPrivate::notify_helper(QObject *, QEvent *)                                                                                                                                                                                                                                                                 (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtWidgets.framework/Versions/5/QtWidgets                         0x100f95e92    
      15 QApplication::notify(QObject *, QEvent *)                                                                                                                                                                                                                                                                               (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtWidgets.framework/Versions/5/QtWidgets                         0x100f973e6    
      16 QCoreApplication::notifyInternal2(QObject *, QEvent *)                                                                                                                                                                                                                                                                  (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101fa49f4    
      17 QGuiApplicationPrivate::setApplicationState(Qt::ApplicationState, bool)                                                                                                                                                                                                                                                 (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtGui.framework/Versions/5/QtGui                                 0x1015efbc4    
      18 QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                   (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtGui.framework/Versions/5/QtGui                                 0x1015d215b    
      19 QCocoaEventDispatcherPrivate::processPostedEvents()                                                                                                                                                                                                                                                                     (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/plugins/platforms/libqcocoa.dylib                                    0x103b220f0    
      20 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void *)                                                                                                                                                                                                                                                        (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/plugins/platforms/libqcocoa.dylib                                    0x103b22858    
      21 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__                                                                                                                                                                                                                                                              (x86_64h) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                 0x7fff34561f12 
      22 __CFRunLoopDoSource0                                                                                                                                                                                                                                                                                                    (x86_64h) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                 0x7fff34561eb1 
      23 __CFRunLoopDoSources0                                                                                                                                                                                                                                                                                                   (x86_64h) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                 0x7fff34561ccb 
      24 __CFRunLoopRun                                                                                                                                                                                                                                                                                                          (x86_64h) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                 0x7fff345609fa 
      25 CFRunLoopRunSpecific                                                                                                                                                                                                                                                                                                    (x86_64h) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                 0x7fff3455fffe 
      26 RunCurrentEventLoopInMode                                                                                                                                                                                                                                                                                               (x86_64) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox     0x7fff33193abd 
      27 ReceiveNextEventCommon                                                                                                                                                                                                                                                                                                  (x86_64) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox     0x7fff331936f4 
      28 _BlockUntilNextEventMatchingListInModeWithFilter                                                                                                                                                                                                                                                                        (x86_64) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox     0x7fff33193579 
      29 _DPSNextEvent                                                                                                                                                                                                                                                                                                           (x86_64) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                  0x7fff317dec99 
      30 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]                                                                                                                                                                                                                                         (x86_64) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                  0x7fff317dd4e0 
      31 -[NSApplication run]                                                                                                                                                                                                                                                                                                    (x86_64) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                  0x7fff317cf1ee 
      32 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                             (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/plugins/platforms/libqcocoa.dylib                                    0x103b215d3    
      33 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                                                 (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101fa0a7f    
      34 QCoreApplication::exec()                                                                                                                                                                                                                                                                                                (x86_64) /Users/Shared/qt/QtOnline/5.14.2/clang_64/lib/QtCore.framework/Versions/5/QtCore                               0x101fa5002    
      35 main                                                                                                                                                                                                                                                                                                                    main.cpp                                                                                                            738 0x100009535    
      36 start                                                                                                                                                                                                                                                                                                                   (x86_64) /usr/lib/system/libdyld.dylib                                                                                  0x7fff6e4a8cc9 
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-24015
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes